--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -3,6 +3,39 @@
         background: linear-gradient(90deg, #aaa, #ccc);
         color: black;
     }
+    .caption {
+        margin: 4rem 0 0.5rem 0;
+        display: flex;
+        align-items: center;
+        h1 {
+            padding-right: 1rem;
+            flex-shrink: 0;
+        }
+        .separateBar {
+            height: 2px !important;
+        }
+    }
+    .recommendBlogsContainer {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        max-height: 40rem;
+        position: relative;
+        .firstContainer {
+            margin-right: 1rem;
+            width: 100%;
+        }
+        .secondContainer {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            max-width: 28rem;
+            article:not(:last-child) {
+                margin-bottom: 1rem;
+            }
+        }
+    }
     .top5BlogPostersContainer {
         display: grid;
         justify-items: center;
@@ -61,6 +94,17 @@
     .home {
         .blogListContainer {
             grid-template-columns: 1fr;
+        }
+        .recommendBlogsContainer {
+            flex-direction: column;
+            max-height: none;
+            .firstContainer {
+                margin-right: 0;
+                margin-bottom: 1rem;
+            }
+            .secondContainer {
+                max-width: 50rem;
+            }
         }
     }
 }
