Update web, update web style working in progress

--- a/web/assets/style/scss/sideBar.scss
+++ b/web/assets/style/scss/sideBar.scss
@@ -70,6 +70,9 @@
             margin-top: 5rem;
             text-align: center;
             color: white;
+            img {
+                object-fit: cover;
+            }
             p {
                 font-size: 1.5rem;
             }
