--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -121,14 +121,14 @@
     }
     header {
         cursor: pointer;
-        margin-top: 3rem;
+        margin-top: 2rem;
         transition: 0.3s;
         opacity: 0.8;
         &:hover {
             opacity: 1;
             .imageContainer {
                 img {
-                    object-position: 0 0;
+                    object-position: center center;
                 }
             }
         }
@@ -136,9 +136,10 @@
             overflow: hidden;
             img {
                 display: block;
-                transition: 0.3s;
+                height: 15rem;
+                transition: 0.5s;
                 object-fit: cover;
-                object-position: -2rem 0;
+                object-position: calc(50% - 3rem) center;
                 max-height: 18rem;
                 width: calc(100% + 3rem);
             }
@@ -193,8 +194,48 @@
         }
     }
 }
+.popularAndTrandingBlogTileContainer {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    header {
+        overflow: hidden;
+        img {
+            display: block;
+            width: 100%;
+            height: 15rem;
+            object-fit: cover;
+            transition: 2s;
+            cursor: pointer;
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+    }
+    main {
+        display: block;
+        color: black;
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 5%;
+        margin-top: -4rem;
+        margin-left: 3%;
+        position: relative;
+        p {
+            text-transform: uppercase;
+            font-weight: bolder;
+        }
+        header {
+            display: inline-block;
+            cursor: pointer;
+            font-size: 1.2rem;
+        }
+        footer {
+            color: rgba(0, 0, 0, 0.5);
+        }
+    }
+}
 .recommendBlogTileContainer {
-    background-color: rgba(0, 0, 0, 0.03);
+    background-color: rgba(126, 53, 53, 0.05);
     width: 100%;
     height: 100%;
     position: relative;
@@ -217,10 +258,12 @@
         position: absolute;
         bottom: 0;
         header {
+            display: inline-block;
             cursor: pointer;
         }
         footer {
             font-size: 0.9rem;
+            color: rgba(255, 255, 255, 0.7);
         }
     }
 }
