--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -1,7 +1,20 @@
 .home {
     .bannerContainer {
-        background: linear-gradient(90deg, #aaa, #ccc);
-        color: black;
+        background: linear-gradient(180deg, #ddd, #eee);
+        text-align: center;
+        padding: 10rem 0;
+        header {
+            font-size: 3rem;
+        }
+        main {
+            font-size: 1.5rem;
+        }
+        footer {
+            display: inline-block;
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
     }
     .caption {
         margin: 4rem 0 0.5rem 0;
@@ -10,6 +23,7 @@
         h1 {
             padding-right: 1rem;
             flex-shrink: 0;
+            text-transform: uppercase;
         }
         .separateBar {
             height: 2px !important;
@@ -19,20 +33,117 @@
         display: flex;
         width: 100%;
         height: 100%;
-        max-height: 40rem;
         position: relative;
         .firstContainer {
             margin-right: 1rem;
             width: 100%;
+            flex: 2 2 0;
         }
         .secondContainer {
             position: relative;
+            flex: 1 1 0;
             display: flex;
             flex-direction: column;
             width: 100%;
-            max-width: 28rem;
             article:not(:last-child) {
                 margin-bottom: 1rem;
+            }
+        }
+    }
+    .popularBlogsContainer {
+        display: flex;
+        .popularBlogsListContainer {
+            flex: 3 3 0;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            column-gap: 1rem;
+            row-gap: 1rem;
+            .adContainer {
+                .adImage {
+                    height: 15rem;
+                    color: white;
+                    position: relative;
+                    cursor: pointer;
+                    transition: 2s;
+                    &:hover {
+                        font-size: 2rem;
+                    }
+                    p {
+                        text-transform: uppercase;
+                        margin: 0;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+                .adText {
+                    position: relative;
+                    margin-top: -4rem;
+                    margin-left: 3%;
+                    height: 8rem;
+                    background-color: rgba(255, 255, 255, 0.8);
+                    p {
+                        text-transform: uppercase;
+                        padding: 5%;
+                    }
+                }
+            }
+        }
+        aside {
+            flex: 1 1 0;
+            flex-shrink: 0;
+            border: 2px solid peru;
+            margin-left: 1rem;
+            text-transform: uppercase;
+            color: peru;
+            position: relative;
+            display: none;
+            p {
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+    }
+    .trendingBlogsContainer {
+        .trendingBlogsListContainer {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            column-gap: 1rem;
+            row-gap: 1rem;
+            .adContainer {
+                .adImage {
+                    height: 15rem;
+                    color: white;
+                    position: relative;
+                    cursor: pointer;
+                    transition: 2s;
+                    &:hover {
+                        font-size: 2rem;
+                    }
+                    p {
+                        text-transform: uppercase;
+                        margin: 0;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+                .adText {
+                    position: relative;
+                    margin-top: -4rem;
+                    margin-left: 3%;
+                    height: 8rem;
+                    background-color: rgba(255, 255, 255, 0.8);
+                    p {
+                        text-transform: uppercase;
+                        padding: 5%;
+                    }
+                }
             }
         }
     }
@@ -66,6 +177,11 @@
 /* x large screens */
 @media only screen and (min-width: $break-point-xl) {
     .home {
+        .popularBlogsContainer {
+            aside {
+                display: block;
+            }
+        }
         .blogListContainer {
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
@@ -74,8 +190,13 @@
 /* large screens */
 @media only screen and (max-width: $break-point-xl - 1px) and (min-width: $break-point-lg) {
     .home {
+        .popularBlogsContainer {
+            aside {
+                display: block;
+            }
+        }
         .blogListContainer {
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
         }
     }
 }
@@ -83,28 +204,72 @@
 /* medium-sized screens */
 @media only screen and (max-width: $break-point-lg - 1px) and (min-width: $break-point-md) {
     .home {
+        .trendingBlogsContainer {
+            .trendingBlogsListContainer {
+                grid-template-columns: 1fr 1fr 1fr;
+            }
+        }
         .blogListContainer {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr;
         }
     }
 }
 
 /* small screens */
-@media only screen and (max-width: $break-point-md - 1px) {
+@media only screen and (max-width: $break-point-md - 1px) and (min-width: $break-point-sm) {
     .home {
-        .blogListContainer {
-            grid-template-columns: 1fr;
-        }
         .recommendBlogsContainer {
             flex-direction: column;
-            max-height: none;
             .firstContainer {
                 margin-right: 0;
                 margin-bottom: 1rem;
             }
             .secondContainer {
-                max-width: 50rem;
+                flex-direction: row;
+                align-items: stretch;
+                article:not(:last-child) {
+                    margin-right: 1rem;
+                    margin-bottom: 0;
+                }
             }
+        }
+        .popularBlogsContainer {
+            .popularBlogsListContainer {
+                grid-template-columns: 1fr 1fr;
+            }
+        }
+        .trendingBlogsContainer {
+            .trendingBlogsListContainer {
+                grid-template-columns: 1fr 1fr;
+            }
+        }
+        .blogListContainer {
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+}
+/* x - small screens */
+@media only screen and (max-width: $break-point-sm - 1px) {
+    .home {
+        .recommendBlogsContainer {
+            flex-direction: column;
+            .firstContainer {
+                margin-right: 0;
+                margin-bottom: 1rem;
+            }
+        }
+        .popularBlogsContainer {
+            .popularBlogsListContainer {
+                grid-template-columns: 1fr;
+            }
+        }
+        .trendingBlogsContainer {
+            .trendingBlogsListContainer {
+                grid-template-columns: 1fr;
+            }
+        }
+        .blogListContainer {
+            grid-template-columns: 1fr;
         }
     }
 }
