Update web, web 2.0.0 issue

--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -173,7 +173,7 @@
 .searchBarContainer {
     margin-bottom: 2rem;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     .searchButton {
         margin-left: 1rem;
         padding: 1rem;
