--- a/web/assets/style/scss/index.scss
+++ b/web/assets/style/scss/index.scss
@@ -28,7 +28,7 @@ body {
         word-wrap: break-word;
         word-break: break-word;
     }
-    section {
+    p {
         text-align: justify;
     }
     .v-tab {
