--- a/web/assets/style/scss/sideBar.scss
+++ b/web/assets/style/scss/sideBar.scss
@@ -73,7 +73,7 @@
             img {
                 object-fit: cover;
             }
-            p {
+            main {
                 font-size: 1.5rem;
             }
             .infosContainer {
