--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -15,6 +15,7 @@
             font-size: 1.5rem;
         }
         footer {
+            margin-top: 1.5rem;
             display: inline-block;
             cursor: pointer;
             font-weight: bold;
