--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -179,6 +179,7 @@
     display: flex;
     flex-direction: row;
     .searchButton {
+        flex-shrink: 0;
         margin-left: 1rem;
         padding: 1rem;
         cursor: pointer;
@@ -195,6 +196,40 @@
         outline: none;
         &:focus {
             outline: 2px solid cyan;
+        }
+    }
+}
+
+.recommendBlogTileContainer {
+    background-color: rgba(126, 53, 53, 0.05);
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 2s;
+        cursor: pointer;
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+    main {
+        width: 100%;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.5);
+        position: absolute;
+        bottom: 0;
+        header {
+            display: inline-block;
+            cursor: pointer;
+        }
+        footer {
+            font-size: 0.9rem;
+            color: rgba(255, 255, 255, 0.7);
         }
     }
 }
@@ -235,39 +270,6 @@
         }
         footer {
             color: rgba(0, 0, 0, 0.5);
-        }
-    }
-}
-.recommendBlogTileContainer {
-    background-color: rgba(126, 53, 53, 0.05);
-    width: 100%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: 2s;
-        cursor: pointer;
-        &:hover {
-            transform: scale(1.2);
-        }
-    }
-    main {
-        width: 100%;
-        color: white;
-        background-color: rgba(0, 0, 0, 0.5);
-        position: absolute;
-        bottom: 0;
-        header {
-            display: inline-block;
-            cursor: pointer;
-        }
-        footer {
-            font-size: 0.9rem;
-            color: rgba(255, 255, 255, 0.7);
         }
     }
 }
