--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -1,20 +1,16 @@
 .home {
     .bannerContainer {
         text-align: center;
-        color: black;
-        padding: 10rem 0;
-        background-image: url("https://cdn.vuetifyjs.com/images/parallax/material2.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;
         header {
+            color: black;
             font-size: 3rem;
         }
         main {
+            color: black;
             font-size: 1.5rem;
         }
         footer {
+            color: black;
             margin-top: 1.5rem;
             display: inline-block;
             cursor: pointer;
@@ -218,7 +214,7 @@
 @media only screen and (max-width: $break-point-md - 1px) and (min-width: $break-point-sm) {
     .home {
         .recommendBlogsContainer {
-            flex-direction: column;
+            display: block;
             .firstContainer {
                 margin-right: 0;
                 margin-bottom: 1rem;
@@ -251,7 +247,7 @@
 @media only screen and (max-width: $break-point-sm - 1px) {
     .home {
         .recommendBlogsContainer {
-            flex-direction: column;
+            display: block;
             .firstContainer {
                 margin-right: 0;
                 margin-bottom: 1rem;
